--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@telegram-apps/sdk": "^2.5.2",
     "@telegram-apps/sdk-react": "^2.0.9",
+    "axios": "^1.7.7",
     "less": "^4.2.0",
+    "lottie-react": "^2.4.0",
     "platform": "^1.3.6",
     "postcss-pxtorem": "^6.1.0",
+    "qs": "^6.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.27.0"
@@ -23,6 +26,7 @@
     "@eslint/js": "^9.13.0",
     "@types/node": "^22.8.4",
     "@types/postcss-pxtorem": "^6.1.0",
+    "@types/qs": "^6.9.16",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.1",
     "@vitejs/plugin-react": "^4.3.3",
