fix(glabal): 修改打包出错

--- a/tsconfig.node.json
+++ b/tsconfig.node.json
@@ -18,7 +18,9 @@
     "noUnusedParameters": false,
     "allowSyntheticDefaultImports": true,
     "noFallthroughCasesInSwitch": true,
-    "noUncheckedSideEffectImports": true
+    "noUncheckedSideEffectImports": true,
+    "resolveJsonModule": true,
+    "esModuleInterop": true, 
   },
   "include": ["vite.config.ts"]
 }
