--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -b && vite build",
+    "build": "tsc -b && vite build --mode development",
+    "build:pro": "tsc -b && vite build --mode production",
     "lint": "eslint .",
     "preview": "vite preview"
   },
