--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@telegram-apps/init-data-node": "^1.1.1",
     "@telegram-apps/sdk": "^2.5.2",
     "@telegram-apps/sdk-react": "^2.0.9",
     "axios": "^1.7.7",
+    "crypto-js": "^4.2.0",
     "less": "^4.2.0",
     "lottie-react": "^2.4.0",
     "platform": "^1.3.6",
