--- a/.gitignore
+++ b/.gitignore
@@ -6,12 +6,12 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-
+.history
 node_modules
 dist
 dist-ssr
 *.local
-
+.vscode
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
@@ -22,4 +22,3 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-.tsbuildinfo
